--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
 <!-- animation -->
 <div id="narrativebox" class="ef1">
   <div id="narbody">
-
+    <div id="nar_2275ca35" class="narcontent">
+      POLITECNICA
+      <img src="./data/index/img/download.jpg" width="100%">
+    </div>
   </div>
   <div id="nextbtn"></div>
 </div>
