--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="./threejs/three.min.js"></script>
 <script src="./threejs/OrbitControls.js"></script>
 <script src="./threejs/ViewHelper.js"></script>
+<script src="./tweenjs/tween.js"></script>
 <script src="./Qgis2threejs.js"></script>
 </head>
 <body>
@@ -116,7 +117,7 @@
 
 <script>
 Q3D.Config.allVisible = true;
-
+Q3D.Config.animation.enabled = true;
 
 var container = document.getElementById("view"),
     app = Q3D.application,
